--- a/audio/index.html
+++ b/audio/index.html
@@ -20,6 +20,35 @@
       <td><img style="vertical-align:top; height:50%" src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg" /></td></tr></table>
 
       <h2>List of stories by language</h2>
+        <h3><a name="ar"></a>Arabic [العربية]</h3>
+          <ul>
+            <li><a href="ar/0001_الرجل-ذو-القامة-الطويلة_audio-slides.html" target="_blank">الرجل ذو القامة الطويلة</a></li>
+            <li><a href="ar/0002_انظر-إلى-الحيونات_audio-slides.html" target="_blank">انظر إلى الحيونات</a></li>
+            <li><a href="ar/0003_ملابس-المدرسة_audio-slides.html" target="_blank">ملابس المدرسة</a></li>
+            <li><a href="ar/0004_الماعز-و-الكلب-و-البقرة_audio-slides.html" target="_blank">الماعز و الكلب و البقرة</a></li>
+            <li><a href="ar/0008_ماذا-تفعل؟_audio-slides.html" target="_blank">ماذا تفعل؟</a></li>
+            <li><a href="ar/0009_أين-قطتي؟_audio-slides.html" target="_blank">أين قطتي؟</a></li>
+            <li><a href="ar/0027_القرار_audio-slides.html" target="_blank">القرار</a></li>
+            <li><a href="ar/0030_المشاعر_audio-slides.html" target="_blank">المشاعر</a></li>
+            <li><a href="ar/0067_الطبخ_audio-slides.html" target="_blank">الطبخ</a></li>
+            <li><a href="ar/0087_-أحب-أن-أقرأ_audio-slides.html" target="_blank">!أحب أن أقرأ</a></li>
+            <li><a href="ar/0089_خلاي-تتحدث-إلى-النباتات_audio-slides.html" target="_blank">خلاي تتحدث إلى النباتات</a></li>
+            <li><a href="ar/0095_-زاما-المميز_audio-slides.html" target="_blank">! زاما المميز</a></li>
+            <li><a href="ar/0111_لماذا-لاتملك-أفراس-النهرشعرا_audio-slides.html" target="_blank">لماذا لاتملك أفراس النهرشعرا</a></li>
+            <li><a href="ar/0112_جسدي_audio-slides.html" target="_blank">جسدي</a></li>
+            <li><a href="ar/0120_الشعر_audio-slides.html" target="_blank">الشعر</a></li>
+            <li><a href="ar/0129_الأخ-الصغير-الكسول_audio-slides.html" target="_blank">الأخ الصغير الكسول</a></li>
+            <li><a href="ar/0156_التمساح-الجائع_audio-slides.html" target="_blank">التمساح الجائع</a></li>
+            <li><a href="ar/0210_تينغي-و-البقر_audio-slides.html" target="_blank">تينغي و البقر</a></li>
+            <li><a href="ar/0231_كتاب-الطقس_audio-slides.html" target="_blank">كتاب الطقس</a></li>
+            <li><a href="ar/0234_أنديسوا-نجمة-كرة-القدم_audio-slides.html" target="_blank">أنديسوا نجمة كرة القدم</a></li>
+            <li><a href="ar/0271_اثنان_audio-slides.html" target="_blank">اثنان</a></li>
+            <li><a href="ar/0296_توم،-بائع-الموز_audio-slides.html" target="_blank">توم، بائع الموز</a></li>
+            <li><a href="ar/0302_النار_audio-slides.html" target="_blank">النار</a></li>
+            <li><a href="ar/0327_لنعد-الحيوانات_audio-slides.html" target="_blank">لنعد الحيوانات</a></li>
+            <li><a href="ar/0337_أطفال-الشمع_audio-slides.html" target="_blank">أطفال الشمع</a></li>
+            <li><a href="ar/0342_العقاب_audio-slides.html" target="_blank">العقاب</a></li>
+          </ul>
         <h3><a name="zh"></a>Chinese (Mandarin) [中文]</h3>
           <ul>
             <li><a href="zh/0001_一个很高的人_audio-slides.html" target="_blank">一个很高的人</a></li>
