--- a/stories/es/0002_mira-a-los-animales_slides.html
+++ b/stories/es/0002_mira-a-los-animales_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>ماذا تفعل ؟ - Global African Storybook</title>
+  <title>Mira a los animales - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ماذا-تفعل" class="slide level1">
-<h1 dir="rtl">ماذا تفعل ؟</h1>
+<section id="mira-a-los-animales" class="slide level1">
+<h1>Mira a los animales</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p dir="rtl">أنا أغني</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
+<p>Mira a los animales.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p dir="rtl">هي تؤشر</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
+<p>La vaca dice, &quot;Muu.&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p dir="rtl">أنا أصفق</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
+<p>La cabra dice, &quot;Be, be.&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p dir="rtl">هي تشد</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
+<p>El caballo dice, &quot;Hin.&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p dir="rtl">هو ينادي</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
+<p>El cerdo dice, &quot;Oink-oink.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p dir="rtl">أنا أجيب</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
+<p>La gallina dice, &quot;Cló-cló.&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p dir="rtl">هي تسمع</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
+<p>El perro dice, &quot;Guau.&quot;</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p dir="rtl"><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/09.jpg" /></p>
-<p dir="rtl">ماذا تفعل أنت ؟</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/09.jpg" /></p>
+<p>El granjero dice, &quot;¡Chsss!&quot;</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,18 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ماذا-تفعل-1">ماذا تفعل ؟</h2>
-<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Heba Tesheh<br> <strong>Language:</strong> Arabic<br>
-<p dir="rtl">
+<h2 id="mira-a-los-animales-1">Mira a los animales</h2>
+<strong>Texto:</strong> Jenny Katz<br> <strong>Ilustración:</strong> Sandy Campbell<br> <strong>Traducción:</strong> Karina Vásquez<br> <strong>Idioma:</strong> Español<br>
+<p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
-<p dir="rtl">
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/what-are-you-doing'>here</a>
-<p dir="rtl"><div class="license">
+<p>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/look-animals'>here</a>
+<p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
-<p dir="rtl"><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<p><center><div class="license">
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
