--- a/stories/fa/0008_عنوان-چه-کار-داری-میکنی‌_slides.html
+++ b/stories/fa/0008_عنوان-چه-کار-داری-میکنی‌_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="عنوان-چه-کار-داری-میکنی" class="slide level1">
-<h1 dir="rtl">عنوان: چه کار داری میکنی‌؟</h1>
+<h1 dir="rtl" dir="rtl" dir="rtl">عنوان: چه کار داری میکنی‌؟</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/01.jpg" />
 </center>
