--- a/stories/fa/0093_پسر-بچه من_slides.html
+++ b/stories/fa/0093_پسر-بچه من_slides.html
@@ -88,7 +88,7 @@
 <body>
 
 <section id="پسر-بچه-من" class="slide level1">
-<h1 dir="rtl">پسر بچه من</h1>
+<h1 dir="rtl" dir="rtl" dir="rtl">پسر بچه من</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0093/01.jpg" />
 </center>
