--- a/stories/pa/0129_ਛੋਟਾ-ਆਲਸੀ-ਭਰਾ.html
+++ b/stories/pa/0129_ਛੋਟਾ-ਆਲਸੀ-ਭਰਾ.html
@@ -70,7 +70,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>ਪੰਜਾਬੀ</div><div
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
 
-<p>ਮੈਂ ਘੜੇ ਨੂੰ ਹਿਲਾਉਂਦਾ ਹਾਂ।</p>
+<p>ਮੈਂ ਘੜੇ ਵਿੱਚ ਕੜਸ਼ੀ ਫੇਰਦਾ ਹਾਂ।</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
