--- a/stories/pa/0141_ਮੁਰਗੀ-ਅਤੇ-ਕੰਨਖਜੂਰਾ.html
+++ b/stories/pa/0141_ਮੁਰਗੀ-ਅਤੇ-ਕੰਨਖਜੂਰਾ.html
@@ -49,7 +49,7 @@ Winny Asara<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
 
-<p>ਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾ ਦੋਸਤ ਸਨ। ਪਰ ਉਹ ਹਮੇਸ਼ਾ ਇਕ-ਦੂਜੇ ਦੇ ਨਾਲ ਮੁਕਾਬਲਾ ਕਰਦੇ ਸਨ। ਇਕ ਦਿਨ ਉਹਨਾਂ ਨੇ ਫੁੱਟਬਾਲ ਖੇਡਣ ਦਾ ਫੈਸਲਾ ਕੀਤਾ, ਇਹ ਵੇਖਣ ਲਈ ਕਿ ਵਧੀਆ ਖਿਡਾਰੀ ਕੌਣ ਸੀ।</p>
+<p>ਮੁਰਗੀ ਅਤੇ ਕੰਨਖਜੂਰਾ ਦੋਸਤ ਸਨ। ਪਰ ਉਹ ਹਮੇਸ਼ਾ ਇਕ-ਦੂਜੇ ਦੇ ਨਾਲ ਮੁਕਾਬਲਾ ਕਰਦੇ ਸਨ। ਇਕ ਦਿਨ ਉਹਨਾਂ ਨੇ ਫੁੱਟਬਾਲ ਖੇਡਣ ਦਾ ਫੈਸਲਾ ਕੀਤਾ, ਇਹ ਵੇਖਣ ਲਈ ਕਿ ਵਧੀਆ ਖਿਡਾਰੀ ਕੌਣ ਹੈ।</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Winny Asara<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
 
-<p>ਮੁਰਗੀ ਖੰਘਦੀ ਰਹੀ ਜਦ ਤੱਕ ਉਸਨੇ ਕੰਨਖਜੂਰੇ ਨੂੰ ਪੇਟ ਵਿੱਚੋਂ ਨਾ ਬਾਹਰ ਖੰਘਿਆ। ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਅਤੇ ਉਸਦਾ ਬੱਚਾ ਇੱਕ ਰੁੱਖ ਤੇ ਛੁਪਣ ਲਈ ਚੜ੍ਹ ਗਏ।</p>
+<p>ਮੁਰਗੀ ਖੰਘਦੀ ਰਹੀ ਜਦ ਤੱਕ ਉਸਨੇ ਕੰਨਖਜੂਰੇ ਨੂੰ ਪੇਟ ਵਿੱਚੋਂ ਬਾਹਰ ਨਾ ਖੰਘਿਆ। ਕੰਨਖਜੂਰੇ ਦੀ ਮਾਂ ਅਤੇ ਉਸਦਾ ਬੱਚਾ ਇੱਕ ਰੁੱਖ ਤੇ ਛੁਪਣ ਲਈ ਚੜ੍ਹ ਗਏ।</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
