--- a/stories/pa/0201_ਗਧਾ-ਬੱਚਾ.html
+++ b/stories/pa/0201_ਗਧਾ-ਬੱਚਾ.html
@@ -112,7 +112,7 @@ Lindiwe Matshikiza<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
 
-<p>ਗਧਾ ਉਲਝਣ ਅਤੇ ਗੁੱਸੇ ਦੇ ਨਾਲ ਅੰਦਰੋਂ ਭਰ ਗਿਆ। ਉਹ ਕੁਝ ਨਹੀਂ ਸੀ ਕਰ ਸਕਦਾ। ਉਹ ਇਸ ਤਰ੍ਹਾਂ ਨਹੀਂ ਸੀ ਬਣ ਸਕਦਾ ਅਤੇ ਉਸ ਤਰ੍ਹਾਂ ਨਹੀਂ ਸੀ ਬਣ ਸਕਦਾ। ਉਹ ਇੱਕ ਦਿਨ ਇਹਨਾਂ ਗੁੱਸੇ ਹੋ ਗਿਆ ਕਿ ਉਸ ਨੇ ਆਪਣੀ ਮਾਂ ਨੂੰ ਲੱਤ ਮਾਰਕੇ ਜ਼ਮੀਨ ਤੇ ਸੁੱਟ ਦਿੱਤਾ।</p>
+<p>ਗਧਾ ਉਲਝਣ ਅਤੇ ਗੁੱਸੇ ਦੇ ਨਾਲ ਅੰਦਰੋਂ ਭਰ ਗਿਆ। ਉਹ ਕੁਝ ਨਹੀਂ ਸੀ ਕਰ ਸਕਦਾ। ਉਹ ਇਸ ਤਰ੍ਹਾਂ ਨਹੀਂ ਸੀ ਬਣ ਸਕਦਾ ਅਤੇ ਉਸ ਤਰ੍ਹਾਂ ਨਹੀਂ ਸੀ ਬਣ ਸਕਦਾ। ਉਹ ਇੱਕ ਦਿਨ ਇਨਾਂ ਗੁੱਸੇ ਹੋ ਗਿਆ ਕਿ ਉਸ ਨੇ ਆਪਣੀ ਮਾਂ ਨੂੰ ਲੱਤ ਮਾਰਕੇ ਜ਼ਮੀਨ ਤੇ ਸੁੱਟ ਦਿੱਤਾ।</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Lindiwe Matshikiza<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>ਜਦ ਉਸ ਨੇ ਭੱਜਣਾ ਬੰਦ ਕੀਤਾ, ਰਾਤ ਹੋ ਗਈ ਸੀ ਅਤੇ ਗਧਾ ਗੁੰਮ ਹੋ ਗਿਆ। “ਹੀ ਹੋ?” ਉਸ ਨੇ ਹਨੇਰੇ ਵਿੱਚ ਧੀਮੀ ਅਵਾਜ਼ ਵਿੱਚ ਆਖਿਆ। “ਹੀ ਹੋ?” ਅਵਾਜ਼ ਵਾਪਸ ਗੂੰਜ ਆਈ। ਉਹ ਇਕੱਲਾ ਸੀ। ਆਪਣੇ ਆਪ ਨੂੰ ਗੁੱਟ ਕੇ ਉਹ ਡੂੰਘੀ ਅਤੇ ਦੁਖ ਭਰੀ ਨੀਂਦ ਵਿੱਚ ਪੈ ਗਿਆ।</p>
+<p>ਜਦ ਉਸ ਨੇ ਭੱਜਣਾ ਬੰਦ ਕੀਤਾ, ਰਾਤ ਹੋ ਗਈ ਸੀ ਅਤੇ ਗਧਾ ਗੁੰਮ ਹੋ ਗਿਆ। “ਹੀ ਹੋ?” ਉਸ ਨੇ ਹਨੇਰੇ ਵਿੱਚ ਧੀਮੀ ਅਵਾਜ਼ ਵਿੱਚ ਆਖਿਆ। “ਹੀ ਹੋ?” ਅਵਾਜ਼ ਵਾਪਸ ਗੂੰਜ ਆਈ। ਉਹ ਇਕੱਲਾ ਸੀ। ਆਪਣੇ ਆਪ ਨੂੰ ਘੁਟ ਕੇ ਉਹ ਡੂੰਘੀ ਅਤੇ ਦੁਖ ਭਰੀ ਨੀਂਦ ਵਿੱਚ ਪੈ ਗਿਆ।</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
