--- a/stories/pa/0291_ਜੋ-ਵੁਸੀ-ਦੀ-ਭੈਣ-ਨੇ-ਕਿਹਾ.html
+++ b/stories/pa/0291_ਜੋ-ਵੁਸੀ-ਦੀ-ਭੈਣ-ਨੇ-ਕਿਹਾ.html
@@ -133,7 +133,7 @@ Nina Orange<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
 
-<p>ਵੁਸੀ ਦੀ ਭੈਣ ਨੇ ਥੋੜੀ ਦੇਰ ਲਈ ਸੋਚਿਆ, ਫਿਰ ਉਸ ਨੇ ਕਿਹਾ, “ਵੁਸੀ ਮੇਰੇ ਭਰਾ, ਮੈਨੂੰ ਸੱਚਮੁੱਚ ਤੋਹਫ਼ੇ ਬਾਰੇ ਪਰਵਾਹ ਨਹੀਂ ਕਰਦੀ। ਮੈਂ ਕੇਕ ਬਾਰੇ ਵੀ ਪਰਵਾਹ ਨਹੀਂ ਕਰਦੀ! ਆਪਾਂ ਸਭ ਇੱਥੇ ਇਕੱਠੇ ਹਾਂ, ਮੈਂ ਖੁਸ਼ ਹਾਂ। ਹੁਣ ਆਪਣੇ ਸਮਾਰਟ ਕੱਪੜੇ ਪਾ ਕੇ ਆ ਅਤੇ ਆਪਾਂ ਇਸ ਦਿਨ ਨੂੰ ਮਨਾਈਏ!” ਅਤੇ ਵੁਸੀ ਨੇ ਇਸ ਤਰ੍ਹਾਂ ਹੀ ਕੀਤਾ।</p>
+<p>ਵੁਸੀ ਦੀ ਭੈਣ ਨੇ ਥੋੜੀ ਦੇਰ ਲਈ ਸੋਚਿਆ, ਫਿਰ ਉਸ ਨੇ ਕਿਹਾ, “ਵੁਸੀ ਮੇਰੇ ਭਰਾ, ਮੈਂ ਸੱਚਮੁੱਚ ਤੋਹਫ਼ੇ ਬਾਰੇ ਪਰਵਾਹ ਨਹੀਂ ਕਰਦੀ। ਮੈਂ ਕੇਕ ਬਾਰੇ ਵੀ ਪਰਵਾਹ ਨਹੀਂ ਕਰਦੀ! ਆਪਾਂ ਸਭ ਇੱਥੇ ਇਕੱਠੇ ਹਾਂ, ਮੈਂ ਖੁਸ਼ ਹਾਂ। ਹੁਣ ਆਪਣੇ ਵਧੀਆ ਕੱਪੜੇ ਪਾ ਕੇ ਆ ਅਤੇ ਆਪਾਂ ਇਸ ਦਿਨ ਨੂੰ ਮਨਾਈਏ!” ਅਤੇ ਵੁਸੀ ਨੇ ਇਸ ਤਰ੍ਹਾਂ ਹੀ ਕੀਤਾ।</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
