--- a/stories/pa/0129_ਛੋਟਾ-ਆਲਸੀ-ਭਰਾ_slides.html
+++ b/stories/pa/0129_ਛੋਟਾ-ਆਲਸੀ-ਭਰਾ_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
-<p>ਮੈਂ ਘੜੇ ਨੂੰ ਹਿਲਾਉਂਦਾ ਹਾਂ।</p>
+<p>ਮੈਂ ਘੜੇ ਵਿੱਚ ਕੜਸ਼ੀ ਫੇਰਦਾ ਹਾਂ।</p>
 <center>
 <strong>4</strong>
 </center>
