--- a/stories/pa/0262_ਮਗੋਜ਼ਵੀ.html
+++ b/stories/pa/0262_ਮਗੋਜ਼ਵੀ.html
@@ -105,21 +105,21 @@ Lesley Koyi<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
 
-<p>ਮਗੋਜ਼ਵੀ ਫੁੱਟਪਾਥ ਤੇ ਬੈਠਾ ਤਸਵੀਰਾਂ ਦੀ ਕਿਤਾਬ ਦੇਖ ਰਿਹਾ ਸੀ ਜਦ ਥੋਮਸ ਉਸ ਦੇ ਲਾਗੇ ਬੈਠ ਗਿਆ। “ਇਹ ਕਹਾਣੀ ਕਿਸ ਬਾਰੇ ਹੈ?” ਥੋਮਸ ਨੇ ਪੁੱਛਿਆ। “ਇਹ ਇੱਕ ਮੁੰਡੇ ਬਾਰੇ ਹੈ ਜੋ ਪਾਇਲਟ ਬਣਦਾ ਹੈ,” ਮਗੋਜ਼ਵੀ ਨੇ ਜਵਾਬ ਦਿੱਤਾ। “ਮੁੰਡੇ ਦਾ ਨਾਮ ਕੀ ਹੈ?” ਥੋਮਸ ਨੇ ਪੁੱਛਿਆ। “ਮੈਨੂੰ ਪਤਾ ਨਹੀਂ, ਮੈਂ ਪੜ੍ਹ ਨਹੀਂ ਸਕਦਾ,” ਮਗੋਜ਼ਵੀ ਹੌਲੀ ਜਿਹੀ ਬੋਲਿਆ।</p>
+<p>ਮਗੋਜ਼ਵੀ ਫੁੱਟਪਾਥ ਤੇ ਬੈਠਾ ਤਸਵੀਰਾਂ ਦੀ ਕਿਤਾਬ ਦੇਖ ਰਿਹਾ ਸੀ ਜਦ ਥਾਮਸ ਉਸ ਦੇ ਲਾਗੇ ਬੈਠ ਗਿਆ। “ਇਹ ਕਹਾਣੀ ਕਿਸ ਬਾਰੇ ਹੈ?” ਥਾਮਸ ਨੇ ਪੁੱਛਿਆ। “ਇਹ ਇੱਕ ਮੁੰਡੇ ਬਾਰੇ ਹੈ ਜੋ ਪਾਇਲਟ ਬਣਦਾ ਹੈ,” ਮਗੋਜ਼ਵੀ ਨੇ ਜਵਾਬ ਦਿੱਤਾ। “ਮੁੰਡੇ ਦਾ ਨਾਮ ਕੀ ਹੈ?” ਥਾਮਸ ਨੇ ਪੁੱਛਿਆ। “ਮੈਨੂੰ ਪਤਾ ਨਹੀਂ, ਮੈਂ ਪੜ੍ਹ ਨਹੀਂ ਸਕਦਾ,” ਮਗੋਜ਼ਵੀ ਹੌਲੀ ਜਿਹੀ ਬੋਲਿਆ।</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/11.jpg" /></p>
 
-<p>ਜਦ ਉਹ ਮਿਲੇ, ਮਗੋਜ਼ਵੀ ਥੋਮਸ ਨੂੰ ਆਪਣੀ ਕਹਾਣੀ ਦੱਸਣ ਲੱਗਾ। ਇਹ ਕਹਾਣੀ ਉਸਦੇ ਚਾਚੇ ਅਤੇ ਘਰ ਤੋਂ ਭੱਜਣ ਦੀ ਵਜ੍ਹਾ ਬਾਰੇ ਸੀ। ਥਾਮਸ ਜ਼ਿਆਦਾ ਬੋਲਦਾ ਨਹੀਂ ਸੀ, ਅਤੇ ਉਸ ਨੇ ਮਗੋਜ਼ਵੀ ਨੂੰ ਕੁਝ ਵੀ ਕਰਨ ਲਈ ਨਹੀਂ ਦੱਸਿਆ, ਪਰ ਉਹ ਹਮੇਸ਼ਾ ਧਿਆਨ ਨਾਲ ਸੁਣਦਾ। ਕਈ ਵਾਰ ਉਹ ਨੀਲੇ ਛੱਤ ਵਾਲੇ ਘਰ ਵਿੱਚ ਖਾਣਾਂ ਖਾਂਦੇ ਗੱਲ ਕਰਦੇ।</p>
+<p>ਜਦ ਉਹ ਮਿਲੇ, ਮਗੋਜ਼ਵੀ ਥਾਮਸ ਨੂੰ ਆਪਣੀ ਕਹਾਣੀ ਦੱਸਣ ਲੱਗਾ। ਇਹ ਕਹਾਣੀ ਉਸਦੇ ਚਾਚੇ ਅਤੇ ਘਰ ਤੋਂ ਭੱਜਣ ਦੀ ਵਜ੍ਹਾ ਬਾਰੇ ਸੀ। ਥਾਮਸ ਜ਼ਿਆਦਾ ਬੋਲਦਾ ਨਹੀਂ ਸੀ, ਅਤੇ ਉਸ ਨੇ ਮਗੋਜ਼ਵੀ ਨੂੰ ਕੁਝ ਵੀ ਕਰਨ ਲਈ ਨਹੀਂ ਦੱਸਿਆ, ਪਰ ਉਹ ਹਮੇਸ਼ਾ ਧਿਆਨ ਨਾਲ ਸੁਣਦਾ। ਕਈ ਵਾਰ ਉਹ ਨੀਲੇ ਛੱਤ ਵਾਲੇ ਘਰ ਵਿੱਚ ਖਾਣਾਂ ਖਾਂਦੇ ਗੱਲ ਕਰਦੇ।</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/12.jpg" /></p>
 
-<p>ਮਗੋਜ਼ਵੀ ਦੇ ਦਸਵੇਂ ਜਨਮ ਦਿਨ ਦੇ ਨੇੜੇ, ਥੋਮਸ ਨੇ ਉਸ ਨੂੰ ਇੱਕ ਨਵੀਂ ਕਿਤਾਬ ਦਿੱਤੀ। ਉਹ ਇੱਕ ਪਿੰਡ ਦੇ ਮੁੰਡੇ ਦੀ ਕਹਾਣੀ ਸੀ ਜੋ ਵੱਡਾ ਹੋਕੇ ਮਸ਼ਹੂਰ ਫੁੱਟਬਾਲ ਖਿਡਾਰੀ ਬਣਿਆ। ਥਾਮਸ ਨੇ ਕਈ ਵਾਰ ਮਗੋਜ਼ਵੀ ਨੂੰ ਇਹ ਕਹਾਣੀ ਪੜ੍ਹ ਕੇ ਸੁਣਾਈ, ਪਰ ਇੱਕ ਦਿਨ ਉਸ ਨੇ ਕਿਹਾ, “ਮੈਨੂੰ ਲੱਗਦਾ ਹੈ ਕਿ ਤੈਨੂੰ ਹੁਣ ਸਕੂਲ ਜਾ ਕੇ ਪੜ੍ਹਨਾ ਸਿੱਖਣਾ ਚਾਹੀਦਾ ਹੈ। ਤੈਨੂੰ ਕੀ ਲੱਗਦਾ ਹੈ?” ਥਾਮਸ ਨੇ ਸਮਝਾਇਆ ਕਿ ਉਹ ਇੱਕ ਜਗ੍ਹਾ ਜਾਣਦਾ ਹੈ ਜਿੱਥੇ ਬੱਚੇ ਰਹਿ ਅਤੇ ਸਕੂਲ ਜਾ ਸਕਦੇ ਹਨ।</p>
+<p>ਮਗੋਜ਼ਵੀ ਦੇ ਦਸਵੇਂ ਜਨਮ ਦਿਨ ਦੇ ਨੇੜੇ, ਥਾਮਸ ਨੇ ਉਸ ਨੂੰ ਇੱਕ ਨਵੀਂ ਕਿਤਾਬ ਦਿੱਤੀ। ਉਹ ਇੱਕ ਪਿੰਡ ਦੇ ਮੁੰਡੇ ਦੀ ਕਹਾਣੀ ਸੀ ਜੋ ਵੱਡਾ ਹੋਕੇ ਮਸ਼ਹੂਰ ਫੁੱਟਬਾਲ ਖਿਡਾਰੀ ਬਣਿਆ। ਥਾਮਸ ਨੇ ਕਈ ਵਾਰ ਮਗੋਜ਼ਵੀ ਨੂੰ ਇਹ ਕਹਾਣੀ ਪੜ੍ਹ ਕੇ ਸੁਣਾਈ, ਪਰ ਇੱਕ ਦਿਨ ਉਸ ਨੇ ਕਿਹਾ, “ਮੈਨੂੰ ਲੱਗਦਾ ਹੈ ਕਿ ਤੈਨੂੰ ਹੁਣ ਸਕੂਲ ਜਾ ਕੇ ਪੜ੍ਹਨਾ ਸਿੱਖਣਾ ਚਾਹੀਦਾ ਹੈ। ਤੈਨੂੰ ਕੀ ਲੱਗਦਾ ਹੈ?” ਥਾਮਸ ਨੇ ਸਮਝਾਇਆ ਕਿ ਉਹ ਇੱਕ ਜਗ੍ਹਾ ਜਾਣਦਾ ਹੈ ਜਿੱਥੇ ਬੱਚੇ ਰਹਿ ਅਤੇ ਸਕੂਲ ਜਾ ਸਕਦੇ ਹਨ।</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
