--- a/stories/pa/0291_ਜੋ-ਵੁਸੀ-ਦੀ-ਭੈਣ-ਨੇ-ਕਿਹਾ_slides.html
+++ b/stories/pa/0291_ਜੋ-ਵੁਸੀ-ਦੀ-ਭੈਣ-ਨੇ-ਕਿਹਾ_slides.html
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
-<p>ਵੁਸੀ ਦੀ ਭੈਣ ਨੇ ਥੋੜੀ ਦੇਰ ਲਈ ਸੋਚਿਆ, ਫਿਰ ਉਸ ਨੇ ਕਿਹਾ, “ਵੁਸੀ ਮੇਰੇ ਭਰਾ, ਮੈਨੂੰ ਸੱਚਮੁੱਚ ਤੋਹਫ਼ੇ ਬਾਰੇ ਪਰਵਾਹ ਨਹੀਂ ਕਰਦੀ। ਮੈਂ ਕੇਕ ਬਾਰੇ ਵੀ ਪਰਵਾਹ ਨਹੀਂ ਕਰਦੀ! ਆਪਾਂ ਸਭ ਇੱਥੇ ਇਕੱਠੇ ਹਾਂ, ਮੈਂ ਖੁਸ਼ ਹਾਂ। ਹੁਣ ਆਪਣੇ ਸਮਾਰਟ ਕੱਪੜੇ ਪਾ ਕੇ ਆ ਅਤੇ ਆਪਾਂ ਇਸ ਦਿਨ ਨੂੰ ਮਨਾਈਏ!” ਅਤੇ ਵੁਸੀ ਨੇ ਇਸ ਤਰ੍ਹਾਂ ਹੀ ਕੀਤਾ।</p>
+<p>ਵੁਸੀ ਦੀ ਭੈਣ ਨੇ ਥੋੜੀ ਦੇਰ ਲਈ ਸੋਚਿਆ, ਫਿਰ ਉਸ ਨੇ ਕਿਹਾ, “ਵੁਸੀ ਮੇਰੇ ਭਰਾ, ਮੈਂ ਸੱਚਮੁੱਚ ਤੋਹਫ਼ੇ ਬਾਰੇ ਪਰਵਾਹ ਨਹੀਂ ਕਰਦੀ। ਮੈਂ ਕੇਕ ਬਾਰੇ ਵੀ ਪਰਵਾਹ ਨਹੀਂ ਕਰਦੀ! ਆਪਾਂ ਸਭ ਇੱਥੇ ਇਕੱਠੇ ਹਾਂ, ਮੈਂ ਖੁਸ਼ ਹਾਂ। ਹੁਣ ਆਪਣੇ ਵਧੀਆ ਕੱਪੜੇ ਪਾ ਕੇ ਆ ਅਤੇ ਆਪਾਂ ਇਸ ਦਿਨ ਨੂੰ ਮਨਾਈਏ!” ਅਤੇ ਵੁਸੀ ਨੇ ਇਸ ਤਰ੍ਹਾਂ ਹੀ ਕੀਤਾ।</p>
 <center>
 <strong>13</strong>
 </center>
