--- a/stories/pa/0294_ਦਾਦੀ-ਦੇ-ਕੇਲੇ.html
+++ b/stories/pa/0294_ਦਾਦੀ-ਦੇ-ਕੇਲੇ.html
@@ -63,7 +63,7 @@ Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
 
-<p>ਮੈਨੂੰ ਦਾਦੀ, ਕੇਲੇ, ਕੇਲੇਆਂ ਦੇ ਪੱਤੇ ਅਤੇ ਵੱਡੀ ਤੂੜੀ ਵਾਲੀ ਟੋਕਰੀ ਨੂੰ ਦੇਖਣਾਂ ਬਹੁਤ ਦਿਲਚਸਪ ਲੱਗਦਾ ਸੀ। ਪਰ ਦਾਦੀ ਨੇ ਮੈਨੂੰ ਇੱਕ ਕੰਮ ਕਰਨ ਲਈ ਮਾਂ ਕੋਲ ਭੇਜ ਦਿੱਤਾ। “ਦਾਦੀ, ਕਿਰਪਾ ਕਰਕੇ ਮੈਨੂੰ ਤੁਹਾਨੂੰ ਤਿਆਰ ਕਰਦੇ ਹੋਏ ਦੇਖਣ ਦਿਓ…” “ਜ਼ਿੱਦ ਨਹੀਂ ਕਰੋ ਬੱਚੇ, ਉਹ ਕਰੋ ਜੋ ਤੁਹਾਨੂੰ ਦੱਸਿਆ ਹੈ,” ਉਸ ਨੇ ਜ਼ੋਰ ਦਿੱਤਾ। ਮੈਂ ਭੱਜੀ ਗਈ।</p>
+<p>ਮੈਨੂੰ ਦਾਦੀ, ਕੇਲੇ, ਕੇਲਿਆਂ ਦੇ ਪੱਤੇ ਅਤੇ ਵੱਡੀ ਤੂੜੀ ਵਾਲੀ ਟੋਕਰੀ ਨੂੰ ਦੇਖਣਾਂ ਬਹੁਤ ਦਿਲਚਸਪ ਲੱਗਦਾ ਸੀ। ਪਰ ਦਾਦੀ ਨੇ ਮੈਨੂੰ ਇੱਕ ਕੰਮ ਕਰਨ ਲਈ ਮਾਂ ਕੋਲ ਭੇਜ ਦਿੱਤਾ। “ਦਾਦੀ, ਕਿਰਪਾ ਕਰਕੇ ਮੈਨੂੰ ਤੁਹਾਨੂੰ ਤਿਆਰ ਕਰਦੇ ਹੋਏ ਦੇਖਣ ਦਿਓ…” “ਜ਼ਿੱਦ ਨਹੀਂ ਕਰੋ ਬੱਚੇ, ਉਹ ਕਰੋ ਜੋ ਤੁਹਾਨੂੰ ਦੱਸਿਆ ਹੈ,” ਉਸ ਨੇ ਜ਼ੋਰ ਦਿੱਤਾ। ਮੈਂ ਭੱਜੀ ਗਈ।</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Ursula Nafula<br>ਪੰਜਾਬੀ</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
 
-<p>ਦੋ ਦਿਨ ਬਾਅਦ, ਦਾਦੀ ਨੇ ਮੈਨੂੰ ਉਸ ਦੇ ਬੈੱਡਰੂਮ ਵਿੱਚੋਂ ਉਸ ਦੀ ਤੁਰਨ ਵਾਲੀ ਸੋਟੀ ਲਿਆਉਣ ਲਈ ਭੇਜਿਆ। ਜਦੋਂ ਹੀ ਮੈਂ ਦਰਵਾਜ਼ਾ ਖੋਲ੍ਹਿਆ, ਮੈਨੂੰ ਪੱਕੇ ਕੇਲੇਆਂ ਦੀ ਮਹਿਕ ਨੇ ਸਵਾਗਤ ਕੀਤਾ। ਅੰਦਰਲੇ ਕਮਰੇ ਵਿਚ ਦਾਦੀ ਦੀ ਵੱਡੀ ਤੂੜੀ ਵਾਲੀ ਟੋਕਰੀ ਪਈ ਸੀ। ਉਹ ਇੱਕ ਪੁਰਾਣੇ ਕੰਬਲ ਦੇ ਨਾਲ ਢੱਕੀ ਹੋਈ ਸੀ। ਮੈਂ ਉਸ ਨੂੰ ਚੁੱਕਿਆ ਅਤੇ ਸ਼ਾਨਦਾਰ ਖੁਸ਼ਬੂ ਨੂੰ ਸੁੰਘਿਆ।</p>
+<p>ਦੋ ਦਿਨ ਬਾਅਦ, ਦਾਦੀ ਨੇ ਮੈਨੂੰ ਉਸ ਦੇ ਬੈੱਡਰੂਮ ਵਿੱਚੋਂ ਉਸ ਦੀ ਤੁਰਨ ਵਾਲੀ ਸੋਟੀ ਲਿਆਉਣ ਲਈ ਭੇਜਿਆ। ਜਦੋਂ ਹੀ ਮੈਂ ਦਰਵਾਜ਼ਾ ਖੋਲ੍ਹਿਆ, ਮੈਨੂੰ ਪੱਕੇ ਕੇਲਿਆਂ ਦੀ ਮਹਿਕ ਨੇ ਸਵਾਗਤ ਕੀਤਾ। ਅੰਦਰਲੇ ਕਮਰੇ ਵਿਚ ਦਾਦੀ ਦੀ ਵੱਡੀ ਤੂੜੀ ਵਾਲੀ ਟੋਕਰੀ ਪਈ ਸੀ। ਉਹ ਇੱਕ ਪੁਰਾਣੇ ਕੰਬਲ ਦੇ ਨਾਲ ਢੱਕੀ ਹੋਈ ਸੀ। ਮੈਂ ਉਸ ਨੂੰ ਚੁੱਕਿਆ ਅਤੇ ਸ਼ਾਨਦਾਰ ਖੁਸ਼ਬੂ ਨੂੰ ਸੁੰਘਿਆ।</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
