https: fix urls

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="home">
 
         <center>
-            <h2><a href="stories" class="bigwhite">List of stories for download</a></h2>
+            <h2><a href="stories/" class="bigwhite">List of stories for download</a></h2>
 
           <p class="stats">Currently there are <span style="font-size: large">482</span> translations in <span style="font-size: large">26</span> languages</p>
         </center>
@@ -71,14 +71,14 @@
 
         <p>You can browse <strong><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUVpXWU0xMnJlNEE">all of the translated stories in pdf format</a></strong>, or click <a href="stories">the link above</a> to see a list of all translations and download links in many other formats.</p>
 
-        <p><center><a href="translator" class="big_btn">Click here to begin translating stories!</a></p>
+        <p><center><a href="translator/" class="big_btn">Click here to begin translating stories!</a></p>
         <p class="stats">This will take you to our simple story translator which you can start using right away.<br>No need to register or log in, just pick a language and start translating!</p></center>
 
         <p>There is a <a href="stories/master.html">master list of source stories</a> from the African Storybook Project. Most of these haven't been translated yet, but feel free to pick one you like and start translating!</p>
 
         <p>In order to make sure that these stories are as widely usable and reusable as possible, we try to make them available in a variety of audio, text, and image formats (for example, plain text, html, PDF, Epub, Open Document, ogg, mp3).</p>
         
-        <p>Click <a href="https://github.com/global-asp/global-asp">here</a> to visit the main project page on github, or use the download links on the <a href="stories">stories page</a> to get all the available formats in one package.</p>
+        <p>Click <a href="https://github.com/global-asp/global-asp">here</a> to visit the main project page on github, or use the download links on the <a href="stories/">stories page</a> to get all the available formats in one package.</p>
 
         <p>Also check out our related project using storybook images from ASP:</p>
         <center><p><a href="https://global-asp.github.io/imagebank/" class="darkred button medium">ASP Image Bank Explorer</a></p></center>
