--- a/stories/index.html
+++ b/stories/index.html
@@ -2875,6 +2875,18 @@
       <td><a name="es0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0027</td>
+      <td><a href="/stories/es/0027_la-decisión_slides.html" target="_blank">La decisión</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0027"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0030</td>
+      <td><a href="/stories/es/0030_sentimientos_slides.html" target="_blank">Sentimientos</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0049</td>
       <td><a href="/stories/es/0049_el-arco-iris_slides.html" target="_blank">El arco iris</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3461,13 +3473,13 @@
       <td>0027</td>
       <td><a href="http://my.africanstorybook.org/stories/decision">Decision</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0027">ar</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#tl0027">tl</a>, <a href="#zh0027">zh</a></td>
+      <td><a href="#ar0027">ar</a>, <a href="#es0027">es</a>, <a href="#ko0027">ko</a>, <a href="#pa0027">pa</a>, <a href="#tl0027">tl</a>, <a href="#zh0027">zh</a></td>
     </tr>
     <tr>
       <td>0030</td>
       <td><a href="http://my.africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#tl0030">tl</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#es0030">es</a>, <a href="#ko0030">ko</a>, <a href="#pa0030">pa</a>, <a href="#tl0030">tl</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
