--- a/stories/index.html
+++ b/stories/index.html
@@ -2899,6 +2899,18 @@
       <td><a name="es0050"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/es/0052_simbegwire_slides.html" target="_blank">Simbegwire</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0066</td>
+      <td><a href="/stories/es/0066_nozibele-y-sus-tres-cabellos_slides.html" target="_blank">Nozibele y sus tres cabellos</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0087</td>
       <td><a href="/stories/es/0087_me-gusta-leer_slides.html" target="_blank">¡Me gusta leer!</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3497,7 +3509,7 @@
       <td>0052</td>
       <td><a href="http://my.africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0052">ar</a>, <a href="#ko0052">ko</a>, <a href="#pa0052">pa</a>, <a href="#tl0052">tl</a>, <a href="#zh0052">zh</a></td>
+      <td><a href="#ar0052">ar</a>, <a href="#es0052">es</a>, <a href="#ko0052">ko</a>, <a href="#pa0052">pa</a>, <a href="#tl0052">tl</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -3521,7 +3533,7 @@
       <td>0066</td>
       <td><a href="http://my.africanstorybook.org/stories/nozibele-and-three-hairs">Nozibele and the three hairs</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0066">ar</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#tl0066">tl</a>, <a href="#zh0066">zh</a></td>
+      <td><a href="#ar0066">ar</a>, <a href="#es0066">es</a>, <a href="#ko0066">ko</a>, <a href="#pa0066">pa</a>, <a href="#tl0066">tl</a>, <a href="#zh0066">zh</a></td>
     </tr>
     <tr>
       <td>0067</td>
