--- a/stories/index.html
+++ b/stories/index.html
@@ -2995,6 +2995,12 @@
       <td><a name="es0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0158</td>
+      <td><a href="/stories/es/0158_la-gallina-y-el-águila_slides.html" target="_blank">La Gallina y el Águila</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="es0158"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0210</td>
       <td><a href="/stories/es/0210_tingi-y-las-vacas_slides.html" target="_blank">Tingi y las vacas</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsR1hRTjZOMERIeUU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3791,7 +3797,7 @@
       <td>0158</td>
       <td><a href="http://my.africanstorybook.org/stories/hen-and-eagle">Hen and Eagle</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0158">ar</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#zh0158">zh</a></td>
+      <td><a href="#ar0158">ar</a>, <a href="#es0158">es</a>, <a href="#ko0158">ko</a>, <a href="#no0158">no</a>, <a href="#pa0158">pa</a>, <a href="#tl0158">tl</a>, <a href="#zh0158">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
